# SPDX-FileCopyrightText: Corentin Noël <corentin.noel@collabora.com>
# SPDX-License-Identifier: LGPL-2.1-only OR MPL-2.0

mk_derived_components = files('mkderivedcomponents.pl')
mk_derived_parameters = files('mkderivedparameters.pl')
mk_derived_properties = files('mkderivedproperties.pl')
mk_derived_values = files('mkderivedvalues.pl')
mk_restriction_table = files('mkrestrictiontable.pl')
scripts_dir = meson.current_source_dir()
